se ponen lo campos obligatorios, se saca el riesgo residual, se controlan los checkbox que esten cargados

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -389,7 +389,7 @@
 <div class="form-group">
   <label class=" control-label" for="idOperacion">Codigo Formulario</label>
   <div class="">
-    <input id="codigoFormulario" th:field="*{codigoFormulario}" type="search"  class="form-control input-md">    
+    <input id="codigoFormulario" th:field="*{codigoRiesgo}" type="search"  class="form-control input-md">    
   </div>
 </div>
 
