--- a/src/main/resources/templates/riesgo_view.html
+++ b/src/main/resources/templates/riesgo_view.html
@@ -50,7 +50,7 @@ and open the template in the editor.
 									<input type="hidden" th:field="*{riesgo.usuarioCreador}">
 									<fieldset>
 
-										<input type="hidden"  th:field="*{riesgo.id}">	
+			
 										<input id="residualValor"   th:field="*{riesgo.riesgoResidualValor.valor}" 
 											 type="hidden"  class="form-control input-md" tabIndex="-1">
 											 
@@ -58,7 +58,7 @@ and open the template in the editor.
 										<div class="col-sm-1 form-group">
 											<label class="control-label" for="txtOrigen">Codigo</label>  
 											<div class="">
-												<input id="txtOrigen" disabled="disabled" th:field="*{riesgo.codigoRiesgo}"  name="txtOrigen" type="text" placeholder="" class="form-control input-md" tabIndex="-1" >
+												<input id="txtOrigen" disabled="disabled" th:field="*{riesgo.id}"  name="txtOrigen" type="text" placeholder="" class="form-control input-md" tabIndex="-1" >
 
 											</div>
 										</div>
