se guardan los primeros cambios

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,7 +8,7 @@
 					<div class= "panel-heading row">
 
 						<div class="col-sm-6"><h2>Usuarios</h2></div>
-						<div class="col-sm-3"><a class="btn btn-sm btn-success" th:href="@{/users/create}" >Nuevo</a></div>					
+						<div class="col-sm-3"><a class="btn btn-sm btn-success" th:href="@{/user/create}" >Nuevo</a></div>					
 					</div>	
 					<div class="panel-body"><!--dentro del panel body va mi contenido-->
 
